few projects added

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,42 +1,18 @@
 [
 	{
-		"slug": "cool-project",
-		"name": "Cool project 1",
+		"slug": "RCardScanner",
+		"name": "RCardScanner",
 		"image": "placeholder.jpg",
-		"url": "https://www.google.com",
-		"date": "Jan 2014",
-		"tags": ["Angular JS","API"]
+		"url": "https://github.com/aviisekh/RCardScanner",
+		"date": "June 2016",
+		"tags": ["Android","Python"]
 	},
-	{
-		"name": "Cool project 2",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "May 2014",
-		"tags": ["Python","Django"]
-	},
-	{
-		"name": "Cool project 3",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","Django"]
-	},
-	{
-		"name": "Cool project 4",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
-	},
-	{
-		"name": "Cool project 5",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
-	},
-	{
-		"name": "Cool project 6",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
+		{
+		"slug": "Projectile Simulation",
+		"name": "ProjectileSimulation",
+		"image": "projectile_simulation.png",
+		"url": "https://github.com/aviisekh/Projectile_VPython",
+		"date": "Feburary 2016",
+		"tags": ["Simulation","Python"]
 	}
 ]
