--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ collections:
 
 social:
     - icon: fa-facebook
-      link: "#"
+      link: "https://www.facebook.com/sthnew.meabhishek"
     - icon: fa-twitter
       link: "https://twitter.com/aviisekh"
     - icon: fa-linkedin
