changed about information

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Stack Problems
 description: My Personal Stack Problems
 author: Abhishek Bhatta
 github: https://github.com/aviisekh
-about: I am full stack developer at Leapfrog Technologies. Currently doing more in Rails and Jquery.
+about: I am currently working as ROR consultant in Fleetpanda of Burritolabs Inc.
 disqus_shortname: aviisekh
 google_analytics: UA-125244940-1
 avatar_url: /static/img/pp.jpg
